Adding current queue metrics page

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,9 @@ html
     h3
       = "Goto: "
       a(href="updateAttributes") Update Attributes
+    h3
+      = "Goto: "
+      a(href="currentMetrics") Current Queue Metrics
     h2= "Users in my Connect Instance (" + dataList.length + ")"
     ul
       each val in dataList
