--- a/views/updateAttributes.pug
+++ b/views/updateAttributes.pug
@@ -5,6 +5,9 @@ html
   body
     h3
       = "Goto: "
+      a(href="currentMetrics") Current Queue Metrics
+    h3
+      = "Goto: "
       a(href="../") Users
     h2= "Update Contact Attributes"
     form(method='POST' action='/submit-updateAttributes')
